# object_detection_project3

./: .ginignore  .gitignore  CMakeLists.txt  README.md  example.cpp  is_green.cpp
lane_keeping/: CMakeLists.txt  README.md  package.xml
lane_keeping/config/: config.yaml
lane_keeping/include/lane_keeping_system/: .lane_keeping_system.h.swp  hough_transform_lane_detector.h  lane_keeping_system.h  moving_average_filter.h  pid_controller.h
lane_keeping/launch/: drive.launch
lane_keeping/src/: main.cpp
lane_keeping/src/lane_keeping/: hough_transform_lane_detector.cpp  lane_keeping_system.cpp  main.cpp  moving_average_filter.cpp  pid_controller.cpp
masking/: masking.py  yolov3-tiny_tstl_352.cfg
yolov3-tiny/: yolov3-tiny_tstl_352.cfg  yolov3-tiny_tstl_416.cfg
yolov3-tiny/dataloader/: data_transforms.py  yolodata.py
yolov3_trt_ros-main/launch/: yolov3_trt_ros.launch
yolov3_trt_ros-main/src/: trt_detection.py
yolov3_trt_ros/launch/: yolov3_trt_ros.launch
yolov3_trt_ros/src/: trt_detection.py  yolov3-tiny_tstl_352.cfg
